# hermezos

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  AGENTS.md  BOOTSTRAP.md  DEVELOPMENT.md  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  pages.yml
docs/: MCP.md  Quickstart.md  contrib.md  index.md
docs/android/: gradle_plugins.md
docs/assets/images/: site.webmanifest
docs/overrides/: main.html
docs/schemas/: packbundle.json  packrequest.json  rulecard.json  rulematch.json
docs/stylesheets/: extra.css
registry/android/: RULE-android-android-rule.yaml  prefer-plugins-dsl--RULE-android-plugins-dsl.yaml
registry/examples/: RULE-demo-readme-present.yaml
registry/python/: RULE-python-python-rule.yaml
registry/test/: RULE-test-cli-test-rule.yaml  RULE-test-integration-test-rule.yaml  RULE-test-pack-filter-rule.yaml  RULE-test-test-mcp-rule.yaml  RULE-test-test-rule.yaml
scripts/: fix_kotlin_plugin.sh  generate_schemas.py
src/hermezos/: __init__.py  cli.py  config.py  models.py  packer.py
src/hermezos/index/: __init__.py  graphiti.py  kuzu_index.py  null_index.py
src/hermezos/mcp/: __init__.py  server.py
src/hermezos/storage/: __init__.py  filesystem.py
tests/: test_bootstrap.py  test_cli.py  test_graph_export.py  test_index_null.py  test_kuzu_index.py  test_packer.py  test_schema.py
tests/data/: golden_packbundle.json
